# news-aggregator

./: .gitignore  Makefile  README.md  compose.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: news_routes.py  refresh_routes.py  sources_routes.py  status_routes.py
backend/src/cache/: __init__.py  base.py  in_memory.py  redis_cache.py
backend/src/core/: deps.py  http_client.py  logging.py  metrics.py  selectors.py  settings.py
backend/src/models/: news_cache.py  news_headline.py  news_source.py  source_config.py
backend/src/services/: news_service.py  rss_service.py  scheduler.py  scraping_service.py
backend/tests/contract/: test_news_get.py  test_refresh_post.py  test_source_status_get.py  test_sources_get.py
backend/tests/integration/: conftest.py  test_error_handling.py  test_news_retrieval.py  test_rss_scraping.py
config/app/: .gitignore
config/deploy/: docker-compose.local.yaml  docker-compose.minimal.yaml
docs/: configuration.md  deploy.md  observability.md
frontend/: .env  .env.example  .env.production  .eslintrc.json  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ErrorBoundary.tsx  ErrorMessage.tsx  (+4 more)
nginx/: news.jechua.com.conf  test1.jechua.com.conf
scripts/: deploy-news.sh  deploy-test1.sh
specs/001-build-a-simple/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
